# doublethink

./: pyproject.toml  setup.py
doublethink/: __init__.py  cli.py  orm.py  rethinker.py  services.py
tests/: test_cli.py  test_orm.py  test_rethinker.py  test_svcreg.py
